# bs_peripherials

./: .gitignore  Dockerfile  README.md  pyproject.toml
ros2_nodes/: navigation_node.py  servo_node.py  vision_node.py
src/bs_peripherals/navigation/: controller.py
src/bs_peripherals/servo/: driver.py  payload.py
src/bs_peripherals/tests/: test_manual.py
src/bs_peripherals/utils/: types.py
src/bs_peripherals/vision/: aggregator.py
src/bs_peripherials/servo/: driver.py
