[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "bs-peripherals"
version = "0.1.0"
description = "BS AUV peripherals control library"
requires-python = ">=3.10"
dependencies = [
    "adafruit-circuitpython-pca9685",
    "adafruit-blinka",
    "adafruit-circuitpython-motor",
    "numpy",
]

[tool.setuptools.packages.find]
where = ["src"]